# modded-nanoLOOP

./: CLAUDE.md  PR_REVIEW.md  README.md  kernels_triton.py  model.py  optimizer.py  pyproject.toml  train.py  train_gpt.py
data/: reasoning.py
docs/: CODEBASE_ANALYSIS.md
tests/: test_model.py  test_optimizer.py  test_reasoning.py
