[project]
name = "modded-nanoloop"
version = "0.1.0"
description = "Looped Transformer speedrun — depth-recurrent GPT-2 on FineWeb"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=1.4.1",
    "kernels>=0.12.1",
    "numpy>=2.4.2",
    "setuptools>=82.0.0",
    "torch>=2.10",
    "tqdm>=4.67.3",
    "typing-extensions==4.15.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.ruff]
line-length = 127
target-version = "py312"
extend-exclude = ["*.ipynb", "records/"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without explicit strict parameter
    "C408",   # unnecessary dict() call (rewrite as a literal)
    "E731",   # allow lambda assignments
    "SIM108", # ternary operator
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["ARG"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
