[project]
name = "modded-nanoloop"
version = "0.1.0"
description = "Looped Transformer speedrun — depth-recurrent GPT-2 on FineWeb"
requires-python = ">=3.12"
dependencies = [
    "flash-attn>=2.8.3",
    "huggingface-hub>=1.4.1",
    "kernels>=0.12.1",
    "numpy>=2.4.2",
    "setuptools>=82.0.0",
    "torch>=2.10",
    "tqdm>=4.67.3",
    "typing-extensions==4.15.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.uv.sources]
flash-attn = { url = "https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.7.16/flash_attn-2.8.3+cu128torch2.10-cp312-cp312-linux_x86_64.whl" }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
